// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulletChart renders custom Axis properly 1`] = `
<div
  className="bullet-chart-pf"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-container show-axis"
    >
      <div
        className="bullet-chart-pf-data-container"
      >
        <div
          className="bullet-chart-pf-values-container"
        >
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#39a5dc",
                "title": "data1",
                "tooltipFunction": [Function],
                "value": 10,
              }
            }
            vertical={false}
          />
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#0088ce",
                "title": "data2",
                "tooltipId": "data2-tooltip",
                "value": 20,
              }
            }
            vertical={false}
          />
        </div>
        <BulletChartThreshold
          className="warning"
          threshold={20}
          vertical={false}
        />
        <BulletChartThreshold
          className="error"
          threshold={10}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={1}
          value={50}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={2}
          value={70}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={3}
          value={100}
          vertical={false}
        />
      </div>
      <BulletChartAxis
        className=""
      >
        <BulletChartAxisTic
          className=""
          text="One Third"
          value={33}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          text="Two Thirds"
          value={66}
          vertical={false}
        />
      </BulletChartAxis>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
  <BulletChartLegend
    className=""
  >
    <BulletChartLegendItem
      boxClassName=""
      className=""
      color="#39a5dc"
      title="data1"
      tooltipFunction={[Function]}
      value={10}
    />
    <BulletChartLegendItem
      boxClassName=""
      className=""
      color="#0088ce"
      title="data2"
      tooltipFunction={[Function]}
      value={20}
    />
    <BulletChartLegendItem
      boxClassName="range-0"
      className=""
      title="Range 1"
      tooltipFunction={[Function]}
      value={50}
    />
    <BulletChartLegendItem
      boxClassName="range-1"
      className=""
      title="Range 2"
      tooltipFunction={[Function]}
      value={70}
    />
    <BulletChartLegendItem
      boxClassName="range-2"
      className=""
      title="Range 3"
      tooltipFunction={[Function]}
      value={100}
    />
  </BulletChartLegend>
</div>
`;

exports[`BulletChart renders custom legend properly 1`] = `
<div
  className="bullet-chart-pf"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-container show-axis"
    >
      <div
        className="bullet-chart-pf-data-container"
      >
        <div
          className="bullet-chart-pf-values-container"
        >
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#39a5dc",
                "title": "data1",
                "tooltipFunction": [Function],
                "value": 10,
              }
            }
            vertical={false}
          />
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#0088ce",
                "title": "data2",
                "tooltipId": "data2-tooltip",
                "value": 20,
              }
            }
            vertical={false}
          />
        </div>
        <BulletChartThreshold
          className="warning"
          threshold={20}
          vertical={false}
        />
        <BulletChartThreshold
          className="error"
          threshold={10}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={1}
          value={50}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={2}
          value={70}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={3}
          value={100}
          vertical={false}
        />
      </div>
      <BulletChartAxis
        className=""
      >
        <BulletChartAxisTic
          className=""
          value={0}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={25}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={50}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={75}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={100}
          vertical={false}
        />
      </BulletChartAxis>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
  <div>
    Custom Legend
  </div>
</div>
`;

exports[`BulletChart renders default colors properly 1`] = `
<div
  className="bullet-chart-pf bullet-chart-pf-vertical"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-vertical-data-container"
    >
      <div
        className="bullet-chart-pf-container show-axis"
      >
        <div
          className="bullet-chart-pf-data-container"
        >
          <div
            className="bullet-chart-pf-values-container"
          >
            <BulletChartValue
              className=""
              dot={false}
              prevValue={0}
              value={
                Object {
                  "color": "#39a5dc",
                  "title": "data1",
                  "tooltipFunction": [Function],
                  "value": 10,
                }
              }
              vertical={true}
            />
            <BulletChartValue
              className=""
              dot={false}
              prevValue={0}
              value={
                Object {
                  "color": "#0088ce",
                  "title": "data2",
                  "tooltipFunction": [Function],
                  "value": 20,
                }
              }
              vertical={true}
            />
            <BulletChartValue
              className=""
              dot={false}
              prevValue={0}
              value={
                Object {
                  "color": "#00659c",
                  "title": "data3",
                  "tooltipId": "data3-tooltip",
                  "value": 30,
                }
              }
              vertical={true}
            />
            <BulletChartValue
              className=""
              dot={false}
              prevValue={0}
              value={
                Object {
                  "color": "#004368",
                  "title": "data4",
                  "tooltipId": "data4-tooltip",
                  "value": 40,
                }
              }
              vertical={true}
            />
          </div>
          <BulletChartThreshold
            className="warning"
            threshold={20}
            vertical={true}
          />
          <BulletChartThreshold
            className="error"
            threshold={10}
            vertical={true}
          />
          <BulletChartRange
            className=""
            index={1}
            value={50}
            vertical={true}
          />
          <BulletChartRange
            className=""
            index={2}
            value={70}
            vertical={true}
          />
          <BulletChartRange
            className=""
            index={3}
            value={100}
            vertical={true}
          />
        </div>
        <BulletChartAxis
          className=""
        >
          <BulletChartAxisTic
            className=""
            value={0}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={25}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={50}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={75}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={100}
            vertical={true}
          />
        </BulletChartAxis>
      </div>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
</div>
`;

exports[`BulletChart renders extended colors properly 1`] = `
<div
  className="bullet-chart-pf bullet-chart-pf-vertical"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-vertical-data-container"
    >
      <div
        className="bullet-chart-pf-container show-axis"
      >
        <div
          className="bullet-chart-pf-data-container"
        >
          <div
            className="bullet-chart-pf-values-container"
          >
            <BulletChartValue
              className=""
              dot={false}
              prevValue={0}
              value={
                Object {
                  "color": "#39a5dc",
                  "title": "data1",
                  "tooltipFunction": [Function],
                  "value": 10,
                }
              }
              vertical={true}
            />
            <BulletChartValue
              className=""
              dot={false}
              prevValue={10}
              value={
                Object {
                  "color": "#0088ce",
                  "title": "data2",
                  "tooltipFunction": [Function],
                  "value": 10,
                }
              }
              vertical={true}
            />
            <BulletChartValue
              className=""
              dot={false}
              prevValue={20}
              value={
                Object {
                  "color": "#00659c",
                  "title": "data3",
                  "tooltipFunction": [Function],
                  "value": 10,
                }
              }
              vertical={true}
            />
            <BulletChartValue
              className=""
              dot={false}
              prevValue={30}
              value={
                Object {
                  "color": "#004368",
                  "title": "data4",
                  "tooltipFunction": [Function],
                  "value": 10,
                }
              }
              vertical={true}
            />
            <BulletChartValue
              className=""
              dot={false}
              prevValue={40}
              value={
                Object {
                  "title": "data5",
                  "tooltipFunction": [Function],
                  "value": 10,
                }
              }
              vertical={true}
            />
            <BulletChartValue
              className=""
              dot={false}
              prevValue={50}
              value={
                Object {
                  "title": "data6",
                  "tooltipFunction": [Function],
                  "value": 10,
                }
              }
              vertical={true}
            />
            <BulletChartValue
              className=""
              dot={false}
              prevValue={60}
              value={
                Object {
                  "title": "data7",
                  "tooltipFunction": [Function],
                  "value": 10,
                }
              }
              vertical={true}
            />
            <BulletChartValue
              className=""
              dot={false}
              prevValue={70}
              value={
                Object {
                  "title": "data8",
                  "tooltipFunction": [Function],
                  "value": 10,
                }
              }
              vertical={true}
            />
            <BulletChartValue
              className=""
              dot={false}
              prevValue={80}
              value={
                Object {
                  "title": "data9",
                  "tooltipFunction": [Function],
                  "value": 10,
                }
              }
              vertical={true}
            />
          </div>
          <BulletChartThreshold
            className="warning"
            threshold={20}
            vertical={true}
          />
          <BulletChartThreshold
            className="error"
            threshold={10}
            vertical={true}
          />
          <BulletChartRange
            className=""
            index={1}
            value={50}
            vertical={true}
          />
          <BulletChartRange
            className=""
            index={2}
            value={70}
            vertical={true}
          />
          <BulletChartRange
            className=""
            index={3}
            value={100}
            vertical={true}
          />
        </div>
        <BulletChartAxis
          className=""
        >
          <BulletChartAxisTic
            className=""
            value={0}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={25}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={50}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={75}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={100}
            vertical={true}
          />
        </BulletChartAxis>
      </div>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
</div>
`;

exports[`BulletChart renders properly handling invalid data 1`] = `
<div
  className="bullet-chart-pf"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-container show-axis"
    >
      <div
        className="bullet-chart-pf-data-container"
      >
        <div
          className="bullet-chart-pf-values-container"
        >
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#0088ce",
                "title": "data2",
                "tooltipFunction": [Function],
                "value": -20,
              }
            }
            vertical={false}
          />
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#39a5dc",
                "title": "data1",
                "tooltipFunction": [Function],
                "value": -10,
              }
            }
            vertical={false}
          />
        </div>
        <BulletChartThreshold
          className="warning"
          threshold={-10}
          vertical={false}
        />
        <BulletChartThreshold
          className="error"
          threshold={110}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={1}
          value={-100}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={2}
          value={-70}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={3}
          value={-50}
          vertical={false}
        />
      </div>
      <BulletChartAxis
        className=""
      >
        <BulletChartAxisTic
          className=""
          value={0}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={25}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={50}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={75}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={100}
          vertical={false}
        />
      </BulletChartAxis>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
</div>
`;

exports[`BulletChart renders properly with a single range 1`] = `
<div
  className="bullet-chart-pf"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-container show-axis"
    >
      <div
        className="bullet-chart-pf-data-container"
      >
        <div
          className="bullet-chart-pf-values-container"
        >
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#39a5dc",
                "title": "data1",
                "tooltipFunction": [Function],
                "value": 10,
              }
            }
            vertical={false}
          />
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#0088ce",
                "title": "data2",
                "tooltipId": "data2-tooltip",
                "value": 20,
              }
            }
            vertical={false}
          />
        </div>
        <BulletChartThreshold
          className="warning"
          threshold={20}
          vertical={false}
        />
        <BulletChartThreshold
          className="error"
          threshold={10}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={1}
          value={0}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={2}
          value={0}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={3}
          value={50}
          vertical={false}
        />
      </div>
      <BulletChartAxis
        className=""
      >
        <BulletChartAxisTic
          className=""
          value={0}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={25}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={50}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={75}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={100}
          vertical={false}
        />
      </BulletChartAxis>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
</div>
`;

exports[`BulletChart renders properly with a single value 1`] = `
<div
  className="bullet-chart-pf"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-container show-axis"
    >
      <div
        className="bullet-chart-pf-data-container"
      >
        <div
          className="bullet-chart-pf-values-container"
        >
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#39a5dc",
                "title": "data1",
                "tooltipFunction": [Function],
                "value": 10,
              }
            }
            vertical={false}
          />
        </div>
        <BulletChartThreshold
          className="warning"
          threshold={20}
          vertical={false}
        />
        <BulletChartThreshold
          className="error"
          threshold={10}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={1}
          value={50}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={2}
          value={70}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={3}
          value={100}
          vertical={false}
        />
      </div>
      <BulletChartAxis
        className=""
      >
        <BulletChartAxisTic
          className=""
          value={0}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={25}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={50}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={75}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={100}
          vertical={false}
        />
      </BulletChartAxis>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
</div>
`;

exports[`BulletChart renders properly with all fields 1`] = `
<div
  className="bullet-chart-pf"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-container show-axis"
    >
      <div
        className="bullet-chart-pf-data-container"
      >
        <div
          className="bullet-chart-pf-values-container"
        >
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#39a5dc",
                "title": "data1",
                "tooltipFunction": [Function],
                "value": 10,
              }
            }
            vertical={false}
          />
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#0088ce",
                "title": "data2",
                "tooltipId": "data2-tooltip",
                "value": 20,
              }
            }
            vertical={false}
          />
        </div>
        <BulletChartThreshold
          className="warning"
          threshold={20}
          vertical={false}
        />
        <BulletChartThreshold
          className="error"
          threshold={10}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={1}
          value={50}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={2}
          value={70}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={3}
          value={100}
          vertical={false}
        />
      </div>
      <BulletChartAxis
        className=""
      >
        <BulletChartAxisTic
          className=""
          value={0}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={25}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={50}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={75}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={100}
          vertical={false}
        />
      </BulletChartAxis>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
  <BulletChartLegend
    className=""
  >
    <BulletChartLegendItem
      boxClassName=""
      className=""
      color="#39a5dc"
      title="data1"
      tooltipFunction={[Function]}
      value={10}
    />
    <BulletChartLegendItem
      boxClassName=""
      className=""
      color="#0088ce"
      title="data2"
      tooltipFunction={[Function]}
      value={20}
    />
    <BulletChartLegendItem
      boxClassName="range-0"
      className=""
      title="Range 1"
      tooltipFunction={[Function]}
      value={50}
    />
    <BulletChartLegendItem
      boxClassName="range-1"
      className=""
      title="Range 2"
      tooltipFunction={[Function]}
      value={70}
    />
    <BulletChartLegendItem
      boxClassName="range-2"
      className=""
      title="Range 3"
      tooltipFunction={[Function]}
      value={100}
    />
  </BulletChartLegend>
</div>
`;

exports[`BulletChart renders properly with defaults 1`] = `
<div
  className="bullet-chart-pf"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details={null}
      label={null}
    />
    <div
      className="bullet-chart-pf-container show-axis"
    >
      <div
        className="bullet-chart-pf-data-container"
      >
        <div
          className="bullet-chart-pf-values-container"
        >
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#39a5dc",
                "title": "data1",
                "tooltipFunction": [Function],
                "value": 10,
              }
            }
            vertical={false}
          />
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#0088ce",
                "title": "data2",
                "tooltipId": "data2-tooltip",
                "value": 20,
              }
            }
            vertical={false}
          />
        </div>
        <BulletChartThreshold
          className="warning"
          threshold={70}
          vertical={false}
        />
        <BulletChartThreshold
          className="error"
          threshold={90}
          vertical={false}
        />
      </div>
      <BulletChartAxis
        className=""
      >
        <BulletChartAxisTic
          className=""
          value={0}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={25}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={50}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={75}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={100}
          vertical={false}
        />
      </BulletChartAxis>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
</div>
`;

exports[`BulletChart renders properly with no thresholds 1`] = `
<div
  className="bullet-chart-pf"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-container show-axis"
    >
      <div
        className="bullet-chart-pf-data-container"
      >
        <div
          className="bullet-chart-pf-values-container"
        >
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#39a5dc",
                "title": "data1",
                "tooltipFunction": [Function],
                "value": 10,
              }
            }
            vertical={false}
          />
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#0088ce",
                "title": "data2",
                "tooltipId": "data2-tooltip",
                "value": 20,
              }
            }
            vertical={false}
          />
        </div>
        <BulletChartThreshold
          className="warning"
          threshold={70}
          vertical={false}
        />
        <BulletChartThreshold
          className="error"
          threshold={90}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={1}
          value={50}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={2}
          value={70}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={3}
          value={100}
          vertical={false}
        />
      </div>
      <BulletChartAxis
        className=""
      >
        <BulletChartAxisTic
          className=""
          value={0}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={25}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={50}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={75}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={100}
          vertical={false}
        />
      </BulletChartAxis>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
</div>
`;

exports[`BulletChart renders properly with only error threshold 1`] = `
<div
  className="bullet-chart-pf"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-container show-axis"
    >
      <div
        className="bullet-chart-pf-data-container"
      >
        <div
          className="bullet-chart-pf-values-container"
        >
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#39a5dc",
                "title": "data1",
                "tooltipFunction": [Function],
                "value": 10,
              }
            }
            vertical={false}
          />
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#0088ce",
                "title": "data2",
                "tooltipId": "data2-tooltip",
                "value": 20,
              }
            }
            vertical={false}
          />
        </div>
        <BulletChartThreshold
          className="warning"
          threshold={70}
          vertical={false}
        />
        <BulletChartThreshold
          className="error"
          threshold={100}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={1}
          value={50}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={2}
          value={70}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={3}
          value={100}
          vertical={false}
        />
      </div>
      <BulletChartAxis
        className=""
      >
        <BulletChartAxisTic
          className=""
          value={0}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={25}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={50}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={75}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={100}
          vertical={false}
        />
      </BulletChartAxis>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
</div>
`;

exports[`BulletChart renders properly with only value in the legend 1`] = `
<div
  className="bullet-chart-pf"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-container show-axis"
    >
      <div
        className="bullet-chart-pf-data-container"
      >
        <div
          className="bullet-chart-pf-values-container"
        >
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#39a5dc",
                "title": "data1",
                "tooltipFunction": [Function],
                "value": 10,
              }
            }
            vertical={false}
          />
        </div>
        <BulletChartThreshold
          className="warning"
          threshold={20}
          vertical={false}
        />
        <BulletChartThreshold
          className="error"
          threshold={100}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={1}
          value={50}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={2}
          value={70}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={3}
          value={100}
          vertical={false}
        />
      </div>
      <BulletChartAxis
        className=""
      >
        <BulletChartAxisTic
          className=""
          value={0}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={25}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={50}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={75}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={100}
          vertical={false}
        />
      </BulletChartAxis>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
  <BulletChartLegend
    className=""
  >
    <BulletChartLegendItem
      boxClassName=""
      className=""
      color="#39a5dc"
      title="data1"
      tooltipFunction={[Function]}
      value={10}
    />
    <BulletChartLegendItem
      boxClassName="range-0"
      className=""
      title=""
      tooltipFunction={[Function]}
      value={50}
    />
    <BulletChartLegendItem
      boxClassName="range-1"
      className=""
      title=""
      tooltipFunction={[Function]}
      value={70}
    />
    <BulletChartLegendItem
      boxClassName="range-2"
      className=""
      title=""
      tooltipFunction={[Function]}
      value={100}
    />
  </BulletChartLegend>
</div>
`;

exports[`BulletChart renders properly with only warning threshold 1`] = `
<div
  className="bullet-chart-pf"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-container show-axis"
    >
      <div
        className="bullet-chart-pf-data-container"
      >
        <div
          className="bullet-chart-pf-values-container"
        >
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#39a5dc",
                "title": "data1",
                "tooltipFunction": [Function],
                "value": 10,
              }
            }
            vertical={false}
          />
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#0088ce",
                "title": "data2",
                "tooltipId": "data2-tooltip",
                "value": 20,
              }
            }
            vertical={false}
          />
        </div>
        <BulletChartThreshold
          className="warning"
          threshold={20}
          vertical={false}
        />
        <BulletChartThreshold
          className="error"
          threshold={90}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={1}
          value={50}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={2}
          value={70}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={3}
          value={100}
          vertical={false}
        />
      </div>
      <BulletChartAxis
        className=""
      >
        <BulletChartAxisTic
          className=""
          value={0}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={25}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={50}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={75}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={100}
          vertical={false}
        />
      </BulletChartAxis>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
</div>
`;

exports[`BulletChart renders properly with two ranges 1`] = `
<div
  className="bullet-chart-pf"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-container show-axis"
    >
      <div
        className="bullet-chart-pf-data-container"
      >
        <div
          className="bullet-chart-pf-values-container"
        >
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#39a5dc",
                "title": "data1",
                "tooltipFunction": [Function],
                "value": 10,
              }
            }
            vertical={false}
          />
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#0088ce",
                "title": "data2",
                "tooltipId": "data2-tooltip",
                "value": 20,
              }
            }
            vertical={false}
          />
        </div>
        <BulletChartThreshold
          className="warning"
          threshold={20}
          vertical={false}
        />
        <BulletChartThreshold
          className="error"
          threshold={10}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={1}
          value={0}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={2}
          value={50}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={3}
          value={100}
          vertical={false}
        />
      </div>
      <BulletChartAxis
        className=""
      >
        <BulletChartAxisTic
          className=""
          value={0}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={25}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={50}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={75}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={100}
          vertical={false}
        />
      </BulletChartAxis>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
</div>
`;

exports[`BulletChart renders properly with unsorted ranges 1`] = `
<div
  className="bullet-chart-pf"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-container show-axis"
    >
      <div
        className="bullet-chart-pf-data-container"
      >
        <div
          className="bullet-chart-pf-values-container"
        >
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#39a5dc",
                "title": "data1",
                "tooltipFunction": [Function],
                "value": 10,
              }
            }
            vertical={false}
          />
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#0088ce",
                "title": "data2",
                "tooltipId": "data2-tooltip",
                "value": 20,
              }
            }
            vertical={false}
          />
        </div>
        <BulletChartThreshold
          className="warning"
          threshold={20}
          vertical={false}
        />
        <BulletChartThreshold
          className="error"
          threshold={10}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={1}
          value={50}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={2}
          value={70}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={3}
          value={100}
          vertical={false}
        />
      </div>
      <BulletChartAxis
        className=""
      >
        <BulletChartAxisTic
          className=""
          value={0}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={25}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={50}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={75}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={100}
          vertical={false}
        />
      </BulletChartAxis>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
</div>
`;

exports[`BulletChart renders properly without axis 1`] = `
<div
  className="bullet-chart-pf"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-container"
    >
      <div
        className="bullet-chart-pf-data-container"
      >
        <div
          className="bullet-chart-pf-values-container"
        >
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#39a5dc",
                "title": "data1",
                "tooltipFunction": [Function],
                "value": 10,
              }
            }
            vertical={false}
          />
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#0088ce",
                "title": "data2",
                "tooltipId": "data2-tooltip",
                "value": 20,
              }
            }
            vertical={false}
          />
        </div>
        <BulletChartThreshold
          className="warning"
          threshold={20}
          vertical={false}
        />
        <BulletChartThreshold
          className="error"
          threshold={10}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={1}
          value={50}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={2}
          value={70}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={3}
          value={100}
          vertical={false}
        />
      </div>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
  <BulletChartLegend
    className=""
  >
    <BulletChartLegendItem
      boxClassName=""
      className=""
      color="#39a5dc"
      title="data1"
      tooltipFunction={[Function]}
      value={10}
    />
    <BulletChartLegendItem
      boxClassName=""
      className=""
      color="#0088ce"
      title="data2"
      tooltipFunction={[Function]}
      value={20}
    />
    <BulletChartLegendItem
      boxClassName="range-0"
      className=""
      title="Range 1"
      tooltipFunction={[Function]}
      value={50}
    />
    <BulletChartLegendItem
      boxClassName="range-1"
      className=""
      title="Range 2"
      tooltipFunction={[Function]}
      value={70}
    />
    <BulletChartLegendItem
      boxClassName="range-2"
      className=""
      title="Range 3"
      tooltipFunction={[Function]}
      value={100}
    />
  </BulletChartLegend>
</div>
`;

exports[`BulletChart renders stacked chart properly 1`] = `
<div
  className="bullet-chart-pf"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-container show-axis"
    >
      <div
        className="bullet-chart-pf-data-container"
      >
        <div
          className="bullet-chart-pf-values-container"
        >
          <BulletChartValue
            className=""
            dot={false}
            prevValue={0}
            value={
              Object {
                "color": "#39a5dc",
                "title": "data1",
                "tooltipFunction": [Function],
                "value": 10,
              }
            }
            vertical={false}
          />
          <BulletChartValue
            className=""
            dot={false}
            prevValue={10}
            value={
              Object {
                "color": "#0088ce",
                "title": "data2",
                "tooltipId": "data2-tooltip",
                "value": 20,
              }
            }
            vertical={false}
          />
        </div>
        <BulletChartThreshold
          className="warning"
          threshold={20}
          vertical={false}
        />
        <BulletChartThreshold
          className="error"
          threshold={10}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={1}
          value={50}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={2}
          value={70}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={3}
          value={100}
          vertical={false}
        />
      </div>
      <BulletChartAxis
        className=""
      >
        <BulletChartAxisTic
          className=""
          value={0}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={25}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={50}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={75}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={100}
          vertical={false}
        />
      </BulletChartAxis>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
  <BulletChartLegend
    className=""
  >
    <BulletChartLegendItem
      boxClassName=""
      className=""
      color="#39a5dc"
      title="data1"
      tooltipFunction={[Function]}
      value={10}
    />
    <BulletChartLegendItem
      boxClassName=""
      className=""
      color="#0088ce"
      title="data2"
      tooltipFunction={[Function]}
      value={20}
    />
    <BulletChartLegendItem
      boxClassName="range-0"
      className=""
      title="Range 1"
      tooltipFunction={[Function]}
      value={50}
    />
    <BulletChartLegendItem
      boxClassName="range-1"
      className=""
      title="Range 2"
      tooltipFunction={[Function]}
      value={70}
    />
    <BulletChartLegendItem
      boxClassName="range-2"
      className=""
      title="Range 3"
      tooltipFunction={[Function]}
      value={100}
    />
  </BulletChartLegend>
</div>
`;

exports[`BulletChart renders stacked dots chart properly 1`] = `
<div
  className="bullet-chart-pf"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-container show-axis"
    >
      <div
        className="bullet-chart-pf-data-container"
      >
        <div
          className="bullet-chart-pf-values-container"
        >
          <BulletChartValue
            className=""
            dot={true}
            prevValue={0}
            value={
              Object {
                "color": "#39a5dc",
                "title": "data1",
                "tooltipFunction": [Function],
                "value": 10,
              }
            }
            vertical={false}
          />
          <BulletChartValue
            className=""
            dot={true}
            prevValue={10}
            value={
              Object {
                "color": "#0088ce",
                "title": "data2",
                "tooltipId": "data2-tooltip",
                "value": 20,
              }
            }
            vertical={false}
          />
        </div>
        <BulletChartThreshold
          className="warning"
          threshold={20}
          vertical={false}
        />
        <BulletChartThreshold
          className="error"
          threshold={10}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={1}
          value={50}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={2}
          value={70}
          vertical={false}
        />
        <BulletChartRange
          className=""
          index={3}
          value={100}
          vertical={false}
        />
      </div>
      <BulletChartAxis
        className=""
      >
        <BulletChartAxisTic
          className=""
          value={0}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={25}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={50}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={75}
          vertical={false}
        />
        <BulletChartAxisTic
          className=""
          value={100}
          vertical={false}
        />
      </BulletChartAxis>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
  <BulletChartLegend
    className=""
  >
    <BulletChartLegendItem
      boxClassName=""
      className=""
      color="#39a5dc"
      title="data1"
      tooltipFunction={[Function]}
      value={10}
    />
    <BulletChartLegendItem
      boxClassName=""
      className=""
      color="#0088ce"
      title="data2"
      tooltipFunction={[Function]}
      value={20}
    />
    <BulletChartLegendItem
      boxClassName="range-0"
      className=""
      title="Range 1"
      tooltipFunction={[Function]}
      value={50}
    />
    <BulletChartLegendItem
      boxClassName="range-1"
      className=""
      title="Range 2"
      tooltipFunction={[Function]}
      value={70}
    />
    <BulletChartLegendItem
      boxClassName="range-2"
      className=""
      title="Range 3"
      tooltipFunction={[Function]}
      value={100}
    />
  </BulletChartLegend>
</div>
`;

exports[`BulletChart renders vertical chart properly 1`] = `
<div
  className="bullet-chart-pf bullet-chart-pf-vertical"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-vertical-data-container"
    >
      <div
        className="bullet-chart-pf-container show-axis"
      >
        <div
          className="bullet-chart-pf-data-container"
        >
          <div
            className="bullet-chart-pf-values-container"
          >
            <BulletChartValue
              className=""
              dot={false}
              prevValue={0}
              value={
                Object {
                  "color": "#39a5dc",
                  "title": "data1",
                  "tooltipFunction": [Function],
                  "value": 10,
                }
              }
              vertical={true}
            />
            <BulletChartValue
              className=""
              dot={false}
              prevValue={0}
              value={
                Object {
                  "color": "#0088ce",
                  "title": "data2",
                  "tooltipId": "data2-tooltip",
                  "value": 20,
                }
              }
              vertical={true}
            />
          </div>
          <BulletChartThreshold
            className="warning"
            threshold={20}
            vertical={true}
          />
          <BulletChartThreshold
            className="error"
            threshold={10}
            vertical={true}
          />
          <BulletChartRange
            className=""
            index={1}
            value={50}
            vertical={true}
          />
          <BulletChartRange
            className=""
            index={2}
            value={70}
            vertical={true}
          />
          <BulletChartRange
            className=""
            index={3}
            value={100}
            vertical={true}
          />
        </div>
        <BulletChartAxis
          className=""
        >
          <BulletChartAxisTic
            className=""
            value={0}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={25}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={50}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={75}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={100}
            vertical={true}
          />
        </BulletChartAxis>
      </div>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
  <BulletChartLegend
    className=""
  >
    <BulletChartLegendItem
      boxClassName=""
      className=""
      color="#39a5dc"
      title="data1"
      tooltipFunction={[Function]}
      value={10}
    />
    <BulletChartLegendItem
      boxClassName=""
      className=""
      color="#0088ce"
      title="data2"
      tooltipFunction={[Function]}
      value={20}
    />
    <BulletChartLegendItem
      boxClassName="range-0"
      className=""
      title="Range 1"
      tooltipFunction={[Function]}
      value={50}
    />
    <BulletChartLegendItem
      boxClassName="range-1"
      className=""
      title="Range 2"
      tooltipFunction={[Function]}
      value={70}
    />
    <BulletChartLegendItem
      boxClassName="range-2"
      className=""
      title="Range 3"
      tooltipFunction={[Function]}
      value={100}
    />
  </BulletChartLegend>
</div>
`;

exports[`BulletChart renders vertical dots chart properly 1`] = `
<div
  className="bullet-chart-pf bullet-chart-pf-vertical"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-vertical-data-container"
    >
      <div
        className="bullet-chart-pf-container show-axis"
      >
        <div
          className="bullet-chart-pf-data-container"
        >
          <div
            className="bullet-chart-pf-values-container"
          >
            <BulletChartValue
              className=""
              dot={true}
              prevValue={0}
              value={
                Object {
                  "color": "#39a5dc",
                  "title": "data1",
                  "tooltipFunction": [Function],
                  "value": 10,
                }
              }
              vertical={true}
            />
            <BulletChartValue
              className=""
              dot={true}
              prevValue={0}
              value={
                Object {
                  "color": "#0088ce",
                  "title": "data2",
                  "tooltipId": "data2-tooltip",
                  "value": 20,
                }
              }
              vertical={true}
            />
          </div>
          <BulletChartThreshold
            className="warning"
            threshold={20}
            vertical={true}
          />
          <BulletChartThreshold
            className="error"
            threshold={10}
            vertical={true}
          />
          <BulletChartRange
            className=""
            index={1}
            value={50}
            vertical={true}
          />
          <BulletChartRange
            className=""
            index={2}
            value={70}
            vertical={true}
          />
          <BulletChartRange
            className=""
            index={3}
            value={100}
            vertical={true}
          />
        </div>
        <BulletChartAxis
          className=""
        >
          <BulletChartAxisTic
            className=""
            value={0}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={25}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={50}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={75}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={100}
            vertical={true}
          />
        </BulletChartAxis>
      </div>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
  <BulletChartLegend
    className=""
  >
    <BulletChartLegendItem
      boxClassName=""
      className=""
      color="#39a5dc"
      title="data1"
      tooltipFunction={[Function]}
      value={10}
    />
    <BulletChartLegendItem
      boxClassName=""
      className=""
      color="#0088ce"
      title="data2"
      tooltipFunction={[Function]}
      value={20}
    />
    <BulletChartLegendItem
      boxClassName="range-0"
      className=""
      title="Range 1"
      tooltipFunction={[Function]}
      value={50}
    />
    <BulletChartLegendItem
      boxClassName="range-1"
      className=""
      title="Range 2"
      tooltipFunction={[Function]}
      value={70}
    />
    <BulletChartLegendItem
      boxClassName="range-2"
      className=""
      title="Range 3"
      tooltipFunction={[Function]}
      value={100}
    />
  </BulletChartLegend>
</div>
`;

exports[`BulletChart renders vertical stacked chart properly 1`] = `
<div
  className="bullet-chart-pf bullet-chart-pf-vertical"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-vertical-data-container"
    >
      <div
        className="bullet-chart-pf-container show-axis"
      >
        <div
          className="bullet-chart-pf-data-container"
        >
          <div
            className="bullet-chart-pf-values-container"
          >
            <BulletChartValue
              className=""
              dot={false}
              prevValue={0}
              value={
                Object {
                  "color": "#39a5dc",
                  "title": "data1",
                  "tooltipFunction": [Function],
                  "value": 10,
                }
              }
              vertical={true}
            />
            <BulletChartValue
              className=""
              dot={false}
              prevValue={10}
              value={
                Object {
                  "color": "#0088ce",
                  "title": "data2",
                  "tooltipId": "data2-tooltip",
                  "value": 20,
                }
              }
              vertical={true}
            />
          </div>
          <BulletChartThreshold
            className="warning"
            threshold={20}
            vertical={true}
          />
          <BulletChartThreshold
            className="error"
            threshold={10}
            vertical={true}
          />
          <BulletChartRange
            className=""
            index={1}
            value={50}
            vertical={true}
          />
          <BulletChartRange
            className=""
            index={2}
            value={70}
            vertical={true}
          />
          <BulletChartRange
            className=""
            index={3}
            value={100}
            vertical={true}
          />
        </div>
        <BulletChartAxis
          className=""
        >
          <BulletChartAxisTic
            className=""
            value={0}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={25}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={50}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={75}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={100}
            vertical={true}
          />
        </BulletChartAxis>
      </div>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
  <BulletChartLegend
    className=""
  >
    <BulletChartLegendItem
      boxClassName=""
      className=""
      color="#39a5dc"
      title="data1"
      tooltipFunction={[Function]}
      value={10}
    />
    <BulletChartLegendItem
      boxClassName=""
      className=""
      color="#0088ce"
      title="data2"
      tooltipFunction={[Function]}
      value={20}
    />
    <BulletChartLegendItem
      boxClassName="range-0"
      className=""
      title="Range 1"
      tooltipFunction={[Function]}
      value={50}
    />
    <BulletChartLegendItem
      boxClassName="range-1"
      className=""
      title="Range 2"
      tooltipFunction={[Function]}
      value={70}
    />
    <BulletChartLegendItem
      boxClassName="range-2"
      className=""
      title="Range 3"
      tooltipFunction={[Function]}
      value={100}
    />
  </BulletChartLegend>
</div>
`;

exports[`BulletChart renders vertical stacked dots chart properly 1`] = `
<div
  className="bullet-chart-pf bullet-chart-pf-vertical"
>
  <div
    className="bullet-chart-pf-chart"
  >
    <BulletChartTitle
      className=""
      details="Test Details"
      label="Test Label"
    />
    <div
      className="bullet-chart-pf-vertical-data-container"
    >
      <div
        className="bullet-chart-pf-container show-axis"
      >
        <div
          className="bullet-chart-pf-data-container"
        >
          <div
            className="bullet-chart-pf-values-container"
          >
            <BulletChartValue
              className=""
              dot={true}
              prevValue={0}
              value={
                Object {
                  "color": "#39a5dc",
                  "title": "data1",
                  "tooltipFunction": [Function],
                  "value": 10,
                }
              }
              vertical={true}
            />
            <BulletChartValue
              className=""
              dot={true}
              prevValue={10}
              value={
                Object {
                  "color": "#0088ce",
                  "title": "data2",
                  "tooltipId": "data2-tooltip",
                  "value": 20,
                }
              }
              vertical={true}
            />
          </div>
          <BulletChartThreshold
            className="warning"
            threshold={20}
            vertical={true}
          />
          <BulletChartThreshold
            className="error"
            threshold={10}
            vertical={true}
          />
          <BulletChartRange
            className=""
            index={1}
            value={50}
            vertical={true}
          />
          <BulletChartRange
            className=""
            index={2}
            value={70}
            vertical={true}
          />
          <BulletChartRange
            className=""
            index={3}
            value={100}
            vertical={true}
          />
        </div>
        <BulletChartAxis
          className=""
        >
          <BulletChartAxisTic
            className=""
            value={0}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={25}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={50}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={75}
            vertical={true}
          />
          <BulletChartAxisTic
            className=""
            value={100}
            vertical={true}
          />
        </BulletChartAxis>
      </div>
    </div>
    <span
      className="bullet-chart-pf-overflow"
    />
  </div>
  <BulletChartLegend
    className=""
  >
    <BulletChartLegendItem
      boxClassName=""
      className=""
      color="#39a5dc"
      title="data1"
      tooltipFunction={[Function]}
      value={10}
    />
    <BulletChartLegendItem
      boxClassName=""
      className=""
      color="#0088ce"
      title="data2"
      tooltipFunction={[Function]}
      value={20}
    />
    <BulletChartLegendItem
      boxClassName="range-0"
      className=""
      title="Range 1"
      tooltipFunction={[Function]}
      value={50}
    />
    <BulletChartLegendItem
      boxClassName="range-1"
      className=""
      title="Range 2"
      tooltipFunction={[Function]}
      value={70}
    />
    <BulletChartLegendItem
      boxClassName="range-2"
      className=""
      title="Range 3"
      tooltipFunction={[Function]}
      value={100}
    />
  </BulletChartLegend>
</div>
`;

exports[`BulletChartAxis renders properly 1`] = `
<div
  className="bullet-chart-pf-axis my-bullet-axis"
>
  <BulletChartAxisTic
    className=""
    value={0}
    vertical={false}
  />
  <BulletChartAxisTic
    className=""
    value={25}
    vertical={false}
  />
  <BulletChartAxisTic
    className=""
    value={50}
    vertical={false}
  />
  <BulletChartAxisTic
    className=""
    value={75}
    vertical={false}
  />
  <BulletChartAxisTic
    className=""
    value={100}
    vertical={false}
  />
</div>
`;

exports[`BulletChartAxis renders properly with custom text 1`] = `
<div
  className="bullet-chart-pf-axis my-bullet-axis"
>
  <BulletChartAxisTic
    className=""
    text="ten"
    value={10}
    vertical={false}
  />
  <BulletChartAxisTic
    className=""
    text="twenty"
    value={20}
    vertical={false}
  />
  <BulletChartAxisTic
    className=""
    text="thirty"
    value={30}
    vertical={false}
  />
  <BulletChartAxisTic
    className=""
    text="forty"
    value={40}
    vertical={false}
  />
  <BulletChartAxisTic
    className=""
    text="fifty"
    value={50}
    vertical={false}
  />
</div>
`;

exports[`BulletChartAxis renders vertical properly 1`] = `
<div
  className="bullet-chart-pf-axis my-bullet-vertical-axis"
>
  <BulletChartAxisTic
    className=""
    value={0}
    vertical={true}
  />
  <BulletChartAxisTic
    className=""
    value={25}
    vertical={true}
  />
  <BulletChartAxisTic
    className=""
    value={50}
    vertical={true}
  />
  <BulletChartAxisTic
    className=""
    value={75}
    vertical={true}
  />
  <BulletChartAxisTic
    className=""
    value={1000}
    vertical={true}
  />
</div>
`;

exports[`BulletChartAxisTic renders properly 1`] = `
<span
  className="bullet-chart-pf-axis-tic my-bullet-axis-tic"
  style={
    Object {
      "left": "calc(25% - 15px)",
    }
  }
>
  25
</span>
`;

exports[`BulletChartAxisTic renders text properly 1`] = `
<span
  className="bullet-chart-pf-axis-tic my-bullet-axis-tic-text"
  style={
    Object {
      "left": "calc(25% - 15px)",
    }
  }
>
  25
</span>
`;

exports[`BulletChartAxisTic renders vertical properly 1`] = `
<span
  className="bullet-chart-pf-axis-tic my-bullet-axis-tic-vertical"
  style={
    Object {
      "bottom": "calc(25% - 10px)",
    }
  }
>
  25
</span>
`;

exports[`BulletChartLegend renders properly 1`] = `
<div
  className="bullet-chart-pf-legend my-bullet-legend"
  id="my-bullet-legend"
>
  <BulletChartLegendItem
    boxClassName=""
    className=""
    color="#39a5dc"
    title="data1"
    value={10}
  />
  <BulletChartLegendItem
    boxClassName=""
    className=""
    color="#0088ce"
    title="data2"
    value={20}
  />
</div>
`;

exports[`BulletChartLegendItem renders properly 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  id="my-bullet-legend-item"
  overlay={
    <Tooltip
      bsClass="tooltip"
      id="my-bullet-legend-item-tooltip-id"
      placement="right"
    >
      data1: 10%
    </Tooltip>
  }
  placement="top"
  rootClose={false}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span
    className="bullet-chart-pf-legend-item my-bullet-legend-item"
  >
    <span
      className="bullet-chart-pf-legend-item-box"
      style={
        Object {
          "backgroundColor": "#39a5dc",
        }
      }
    />
    <span
      className="bullet-chart-pf-legend-item-text"
    >
      data1
    </span>
  </span>
</OverlayTrigger>
`;

exports[`BulletChartLegendItem renders properly 2`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  id="my-bullet-legend-item"
  overlay={
    <Tooltip
      bsClass="tooltip"
      id="bullet-tip-1"
      placement="right"
    >
      10: data1%
    </Tooltip>
  }
  placement="top"
  rootClose={false}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <span
    className="bullet-chart-pf-legend-item my-bullet-legend-item"
  >
    <span
      className="bullet-chart-pf-legend-item-box"
      style={
        Object {
          "backgroundColor": "#39a5dc",
        }
      }
    />
    <span
      className="bullet-chart-pf-legend-item-text"
    >
      data1
    </span>
  </span>
</OverlayTrigger>
`;

exports[`BulletChartRange renders properly 1`] = `
<div
  className="bullet-chart-pf-range-bar range-1 my-bullet-range"
  id="my-bullet-range"
  style={
    Object {
      "height": undefined,
      "width": "20%",
      "zIndex": 80,
    }
  }
/>
`;

exports[`BulletChartRange renders properly 2`] = `
<div
  className="bullet-chart-pf-range-bar range-2 my-bullet-range-vertical"
  id="my-bullet-range-vertical"
  style={
    Object {
      "height": "60%",
      "width": undefined,
      "zIndex": 40,
    }
  }
/>
`;

exports[`BulletChartRange renders properly 3`] = `null`;

exports[`BulletChartRange renders properly 4`] = `null`;

exports[`BulletChartThreshold renders properly 1`] = `
<div
  className="bullet-chart-pf-threshold-indicator my-bullet-threshold"
  id="my-bullet-threshold"
  style={
    Object {
      "bottom": undefined,
      "left": "40%",
    }
  }
/>
`;

exports[`BulletChartThreshold renders properly 2`] = `
<div
  className="bullet-chart-pf-threshold-indicator my-bullet-threshold-vertical"
  id="my-bullet-threshold-vertical"
  style={
    Object {
      "bottom": "60%",
      "left": undefined,
    }
  }
/>
`;

exports[`BulletChartThreshold renders properly 3`] = `null`;

exports[`BulletChartThreshold renders properly 4`] = `null`;

exports[`BulletChartTitle renders properly 1`] = `
<div
  className="bullet-chart-pf-title-container my-bullet-title"
  id="my-bullet-title"
>
  <div
    className="bullet-chart-pf-title"
  >
    test label
  </div>
  <div
    className="bullet-chart-pf-details"
  >
    test details
  </div>
</div>
`;

exports[`BulletChartValue renders properly 1`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Tooltip
      bsClass="tooltip"
      id="bullet-tip-1"
      placement="right"
    >
      data1: 10%
    </Tooltip>
  }
  placement="top"
  rootClose={false}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <div
    className="bullet-chart-pf-value-bar my-bullet-value"
    id="my-bullet-value"
    style={
      Object {
        "backgroundColor": "#39a5dc",
        "bottom": undefined,
        "height": undefined,
        "left": "0%",
        "width": "10%",
        "zIndex": 390,
      }
    }
  />
</OverlayTrigger>
`;

exports[`BulletChartValue renders properly 2`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Tooltip
      bsClass="tooltip"
      id="data2-tooltip"
      placement="right"
    >
      data2: 20%
    </Tooltip>
  }
  placement="top"
  rootClose={false}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <div
    className="bullet-chart-pf-value-bar my-bullet-value-stacked"
    id="my-bullet-value-stacked"
    style={
      Object {
        "backgroundColor": "#0088ce",
        "bottom": undefined,
        "height": undefined,
        "left": "10%",
        "width": "20%",
        "zIndex": 370,
      }
    }
  />
</OverlayTrigger>
`;

exports[`BulletChartValue renders properly 3`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Tooltip
      bsClass="tooltip"
      id="bullet-tip-1"
      placement="right"
    >
      data1: 10%
    </Tooltip>
  }
  placement="right"
  rootClose={false}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <div
    className="bullet-chart-pf-value-bar my-bullet-value-vertical"
    id="my-bullet-value-vertical"
    style={
      Object {
        "backgroundColor": "#39a5dc",
        "bottom": "10%",
        "height": "10%",
        "left": undefined,
        "width": undefined,
        "zIndex": 380,
      }
    }
  />
</OverlayTrigger>
`;

exports[`BulletChartValue renders properly 4`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Tooltip
      bsClass="tooltip"
      id="data2-tooltip"
      placement="right"
    >
      data2: 20%
    </Tooltip>
  }
  placement="top"
  rootClose={false}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <div
    className="bullet-chart-pf-value-dot my-bullet-value-dot"
    id="my-bullet-value-dot"
    style={
      Object {
        "backgroundColor": "#0088ce",
        "bottom": undefined,
        "left": "20%",
        "zIndex": 120,
      }
    }
  />
</OverlayTrigger>
`;

exports[`BulletChartValue renders properly 5`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Tooltip
      bsClass="tooltip"
      id="data2-tooltip"
      placement="right"
    >
      data2: 20%
    </Tooltip>
  }
  placement="top"
  rootClose={false}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <div
    className="bullet-chart-pf-value-dot my-bullet-value-stacked-dot"
    id="my-bullet-value-stacked-dot"
    style={
      Object {
        "backgroundColor": "#0088ce",
        "bottom": undefined,
        "left": "30%",
        "zIndex": 130,
      }
    }
  />
</OverlayTrigger>
`;

exports[`BulletChartValue renders properly 6`] = `
<OverlayTrigger
  defaultOverlayShown={false}
  overlay={
    <Tooltip
      bsClass="tooltip"
      id="bullet-tip-1"
      placement="right"
    >
      data1: 10%
    </Tooltip>
  }
  placement="right"
  rootClose={false}
  trigger={
    Array [
      "hover",
      "focus",
    ]
  }
>
  <div
    className="bullet-chart-pf-value-dot my-bullet-value-vertical-dot"
    id="my-bullet-value-vertical-dot"
    style={
      Object {
        "backgroundColor": "#39a5dc",
        "bottom": "20%",
        "left": undefined,
        "zIndex": 120,
      }
    }
  />
</OverlayTrigger>
`;
